将beforeWorking改为返回失败原因，删除RecipeRunner，清理蒸馏塔和parallelLogic